--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,11 +1,13 @@
 .app-header {
   display: flex;
-  flex: 0.1;
+  height: 10%;
+  min-height: 60px;
   align-items: center;
   padding: 0px 20px;
   background-color: #333;
   background: #e1ebee;
   border-bottom: 1px solid #d3d3d3;
+  width: 100%;
 }
 
 .logo-container {
