--- a/client/src/styles/QuestionType2.css
+++ b/client/src/styles/QuestionType2.css
@@ -1,42 +1,26 @@
-/* Estilos para el contenedor principal */
-.question-type2-container {
-  display: flex;
-  align-items: flex-start;
-}
-
-/* Estilos para la sección de imágenes */
-.image-container {
-  flex: 0 0 50%; /* Ocupa el 50% del ancho del contenedor principal */
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: 20px;
+.image-letter {
+  background-color: #eef5ff;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+  padding: 5px;
+  border-bottom: 2px solid #ddd;
 }
 
 .individual-image-container {
-  width: 50%; /* Ocupa el 50% del ancho de su contenedor */
-  box-sizing: border-box;
-  padding-right: 10px; /* Espacio entre las imágenes */
-  margin-bottom: 10px; /* Espacio entre las filas de imágenes */
+  width: 40%;
+  padding: 0;
+  margin: 10px;
+  border: 2px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-/* Estilos para la sección de texto */
-.text-container {
-  flex: 1; /* Ocupa todo el espacio restante */
-}
-
-/* Media query para cambiar a una sola columna en pantallas más pequeñas */
-@media (max-width: 600px) {
-  .question-type2-container {
-    flex-direction: column; /* Cambia a una columna en pantallas más pequeñas */
-  }
-
-  .image-container {
-    flex: 0 0 100%; /* Ocupa el 100% del ancho en pantallas más pequeñas */
-    margin-right: 0; /* Elimina el margen en pantallas más pequeñas */
-  }
-
-  .individual-image-container {
-    width: 100%; /* Ocupa el 100% del ancho en pantallas más pequeñas */
-    margin-right: 0; /* Elimina el margen en pantallas más pequeñas */
-  }
+.image-container-type2 {
+  display: flex;
+  flex: 0 0 50%;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow-y: scroll;
 }
