--- a/client/src/styles/Quiz.css
+++ b/client/src/styles/Quiz.css
@@ -8,8 +8,83 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 100%;
 }
 
 .quiz-container {
+  display: flex;
+  flex-direction: row;
   flex: 0.85;
+}
+
+/* Si quito esto se queda formato movil */
+.question-type-container {
+  display: flex;
+  flex-direction: row;
+  height: 85%;
+}
+
+.image-container {
+  display: flex;
+  flex: 0 0 50%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.image-container img {
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-container {
+  flex: 1;
+  background: #e1ebee;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.individual-image {
+  width: 100%;
+  height: 100%;
+}
+
+.custom-controls {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 30px;
+  width: 30px;
+  margin: 15px;
+}
+
+.custom-controls button {
+  background-color: #eef5ff;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+  font-size: 16px;
+}
+
+.custom-controls button:hover {
+  background-color: #ddd;
+}
+
+.next-btn {
+  cursor: pointer;
+  background-color: orange;
+  margin: 10px;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 50px;
+  border: 0px;
+}
+
+.question-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
