--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -1,5 +1,7 @@
 .footer {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   height: 5%;
   min-height: 40px;
   align-items: center;
@@ -11,6 +13,16 @@
   z-index: 1000;
 }
 
+.arrows {
+  display: flex;
+  align-items: center;
+}
+
+.arrow {
+  cursor: pointer;
+  margin: 0 10px;
+}
+
 .circles {
   display: flex;
 }
@@ -18,6 +30,7 @@
 .circle {
   width: 20px;
   height: 20px;
+  cursor: pointer;
   border-radius: 50%;
   margin: 5px 5px;
   border: 1px solid gray;
