--- a/client/src/styles/CustomRadioButton.css
+++ b/client/src/styles/CustomRadioButton.css
@@ -26,6 +26,7 @@
   line-height: 1;
 }
 
+/* Estilos predeterminados */
 .selected-radio {
   border: 2px solid #498bf9;
 }
@@ -39,6 +40,49 @@
   color: white;
 }
 
-.custom-radio:hover {
+/* Estilos adicionales para cuando el test está completado y la respuesta es correcta */
+.custom-radio.correct-selected {
+  border: 2px solid #4caf50; /* Verde */
+}
+
+.custom-radio.correct-selected .radio-circle {
+  background-color: #4caf50;
+  border: 2px solid #4caf50;
+}
+
+.custom-radio.correct-selected .custom-radio-content {
+  color: white;
+}
+
+/* Estilos adicionales para cuando el test está completado y la respuesta es incorrecta */
+.custom-radio.incorrect-selected {
+  border: 2px solid #f44336; /* Rojo */
+}
+
+.custom-radio.incorrect-selected .radio-circle {
+  background-color: #f44336;
+  border: 2px solid #f44336;
+}
+
+.custom-radio.incorrect-selected .custom-radio-content {
+  color: white;
+}
+
+/* Mantén el estilo de hover original cuando el test no está completado */
+.custom-radio:not(.correct-selected):not(.incorrect-selected):hover {
   border: 2px solid #498bf9;
+}
+
+/* Estilos adicionales para respuestas no marcadas con score > 0 */
+.custom-radio.unselected-positive-score {
+  border: 2px solid #4d94ff;
+}
+
+.custom-radio.unselected-positive-score .radio-circle {
+  background-color: #4d94ff;
+  border: 2px solid #4d94ff;
+}
+
+.custom-radio.unselected-positive-score .custom-radio-content {
+  color: white;
 }
