--- a/client/src/styles/DiagramImage.css
+++ b/client/src/styles/DiagramImage.css
@@ -1,4 +1,14 @@
-.image-container {
-  height: 100%;
+.diagram-image {
   width: 100%;
+  height: 100%;
+}
+
+.diagram-image-controls {
+  border-bottom: 1px solid black;
+}
+
+.react-transform-wrapper {
+  width: 100% !important;
+  height: 100% !important;
+  overflow: hidden;
 }
