--- a/client/src/styles/QuestionType2.css
+++ b/client/src/styles/QuestionType2.css
@@ -1,35 +1,34 @@
-.image-letter {
-  background-color: #eef5ff;
-  font-size: 20px;
-  font-weight: bold;
-  color: #333;
-  text-align: center;
-  padding: 5px;
-  border-bottom: 2px solid #ddd;
-}
-
-.image-container-type2 {
+.question-type-2-container {
   display: flex;
-  flex: 0 0 50%;
-  flex-wrap: wrap;
-  justify-content: center;
-  overflow-y: scroll;
-}
-
-.individual-image-container {
-  width: 45%;
-  height: auto;
-  min-width: 250px;
-  max-width: 600px;
-  padding: 0;
-  margin: 10px;
-  border: 2px solid #ddd;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.react-transform-wrapper {
-  width: 100%;
+  flex: 1;
   height: 100%;
+  width: 100%;
   overflow: hidden;
+}
+
+.question-type-2-diagram-image-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  overflow: auto;
+
+  border-right: 1px solid black;
+}
+
+.question-type-2-individual-image-container {
+  margin: 10px;
+
+  border: 1px solid black;
+}
+
+.question-type-2-question-answers-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.question-type-2-answers-container {
+  flex: 1;
+  overflow: auto;
 }
