--- a/client/src/styles/Quiz.css
+++ b/client/src/styles/Quiz.css
@@ -1,98 +1,17 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.quiz-page {
+.quiz-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100%;
-}
-
-/* Si quito esto se queda formato movil */
-.question-type-container {
-  display: flex;
-  flex-direction: row;
-  height: 85%;
-}
-
-.image-container {
-  display: flex;
-  flex: 0 0 50%;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.image-container img {
-  max-width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.react-transform-wrapper {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.react-transform-component {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  justify-content: center;
-  align-items: center;
-}
-
-.text-container {
   flex: 1;
-  background: #e1ebee;
-  padding: 20px;
-  overflow-y: auto;
-}
-
-.individual-image {
-  width: 100%;
-  height: 100%;
-}
-
-.custom-controls {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  height: 30px;
-  width: 30px;
-  margin: 15px;
-}
-
-.custom-controls button {
-  background-color: #eef5ff;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
-  cursor: pointer;
-  margin: 5px;
-  padding: 5px;
-  font-size: 16px;
-}
-
-.custom-controls button:hover {
-  background-color: #ddd;
-}
-
-.next-btn {
-  cursor: pointer;
-  background-color: orange;
-  margin: 10px;
-  color: white;
-  padding: 10px 15px;
-  border-radius: 50px;
-  border: 0px;
-}
-
-.question-header {
-  display: flex;
-  flex-direction: row;
+  height: 90%;
   justify-content: space-between;
-  align-items: center;
+  overflow: hidden;
+}
+
+.quiz-question {
+  display: flex;
+  height: 90%;
+}
+
+.quiz-footer {
+  height: 10%;
 }
