--- a/client/src/styles/diagramModal.css
+++ b/client/src/styles/diagramModal.css
@@ -1,12 +1,25 @@
+.diagram-modal-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .diagram-modal-image-container {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: auto;
-  height: auto;
-  max-width: 80%;
-  max-height: 80%;
+  width: 80%;
+  height: 80%;
   overflow: auto;
   box-shadow: 24px 24px 48px 0 rgba(0, 0, 0, 0.4);
+}
+
+.diagram-modal-controls {
+  display: flex;
+  flex-direction: row;
 }
