--- a/client/src/styles/CustomRadioButton.css
+++ b/client/src/styles/CustomRadioButton.css
@@ -34,7 +34,20 @@
 
 .custom-radio-button-answer {
   display: flex;
+  width: 100%;
+  justify-content: left;
+  align-items: center;
+}
+
+.custom-radio-button-answer-text,
+.custom-radio-button-answer-code,
+.custom-radio-button-answer-image {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 100%;
   padding: 5px;
+  overflow: hidden;
 }
 
 /* Estilos para respuestas seleccionada - correcta - incorrecta - correcta no seleccionada */
