--- a/client/src/styles/QuestionType3.css
+++ b/client/src/styles/QuestionType3.css
@@ -8,6 +8,7 @@
 
 .question-type-3-diagram-image-container {
   flex: 1;
+  width: 50%;
   border-right: 1px solid black;
 }
 
@@ -15,6 +16,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  width: 50%;
   padding: 10px;
 }
 
