Gestionar usuario único
Creada la gestión de usuarios con inicio de sesión automático para que no moleste en el desarrollo.

Implementada la funcionalidad de inicio de sesión y registro en la parte del servidor.

--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -12,8 +12,18 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.195);
 }
 
-.header img {
+.header-profile-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.header-avatar {
   height: 100%;
-  width: auto;
+  width: 100%;
+  scale: 1/1;
   margin-left: 10px;
+  border-radius: 25px;
+  border: 1px solid black;
 }
