Sistema de logros básico

--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -12,6 +12,27 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.195);
 }
 
+.header-options-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin-right: 10px;
+}
+
+.header-options-buttons > button {
+  margin: 0 5px;
+  padding: 10px;
+
+  font-weight: bold;
+
+  background-color: transparent;
+  border: none;
+  text-decoration: underline;
+
+  position: relative;
+}
+
 .header-profile-container {
   display: flex;
   align-items: center;
