--- a/client/src/styles/achievement.css
+++ b/client/src/styles/achievement.css
@@ -1,9 +1,56 @@
+.achievement-page {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: 85%;
+
+  overflow: auto;
+}
+
+.achievement-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .achievement {
-  border: 1px solid #ccc;
+  display: flex;
+  flex: 0 0 300px;
+  margin: 20px;
   padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.achievement > img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
   margin-bottom: 10px;
+}
+
+.achievement-text {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 10px;
 }
 
 .achievement.locked {
   opacity: 0.5;
+}
+
+@media screen and (max-width: 768px) {
+  .achievement {
+    flex-basis: calc(50% - 40px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .achievement {
+    flex-basis: calc(100% - 40px);
+  }
 }
