--- a/client/src/styles/teacherPage.css
+++ b/client/src/styles/teacherPage.css
@@ -3,4 +3,52 @@
   flex: 1;
   flex-direction: column;
   height: 85%;
+  position: relative;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 50%;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  overflow-y: auto;
+  transition: transform 0.3s ease-out;
+  transform: translateX(100%);
+}
+
+.modal-content {
+  padding: 20px;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+  pointer-events: none;
+}
+
+.modal-visible {
+  transform: translateX(0);
+}
+
+.background-visible {
+  opacity: 1;
+  pointer-events: auto;
 }
