--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -35,14 +35,24 @@
 
 .header-profile-container {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-right: 10px;
+}
+
+.header-user-container {
+  display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
+
+  height: 100%;
+  width: auto;
 }
 
 .header-avatar {
   height: 100%;
-  width: 100%;
+  width: auto;
   scale: 1/1;
   margin-left: 10px;
   border-radius: 25px;
