--- a/client/src/styles/classPage.css
+++ b/client/src/styles/classPage.css
@@ -1,9 +1,13 @@
 .class-page {
-  display: flex;
   flex: 1;
   flex-direction: column;
   height: 85%;
-  overflow: auto;
+  position: relative;
+
+  padding-left: 5%;
+  padding-right: 5%;
+
+  overflow-y: auto;
 }
 
 .class-page h1 {
@@ -31,8 +35,8 @@
   border: 1px solid #cccccc;
   border-radius: 5px;
   padding: 10px;
-  width: 45%;
-  max-width: 300px;
+  width: 50%;
+  max-width: 250px;
   margin: 10px 5px;
 }
 
@@ -64,4 +68,11 @@
 
 .class-page-statistics {
   display: flex;
+}
+
+.class-page-search-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
