--- a/client/src/styles/studentButton.css
+++ b/client/src/styles/studentButton.css
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   width: 30px;
+  min-width: 30px;
   height: 30px;
   margin-left: 5px;
   margin-right: 5px;
