Mostrar test agrupados vista profesor

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -16,3 +16,11 @@
 button {
   cursor: pointer;
 }
+
+summary {
+  cursor: pointer;
+}
+summary h2 {
+  display: inline-block;
+  margin-right: 10px;
+}
