--- a/client/src/styles/QuizButton.css
+++ b/client/src/styles/QuizButton.css
@@ -3,11 +3,11 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: auto;
+  min-height: 50px;
 
   margin-top: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 0 5px;
 
   overflow: hidden;
 }
@@ -52,8 +52,10 @@
 }
 
 .quiz-button__content-class {
-  height: 80%;
-  width: auto;
+  height: 35px;
+  width: 35;
+
+  min-width: 35px;
 }
 
 .quiz-button__content-student {
