--- a/client/src/styles/classButton.css
+++ b/client/src/styles/classButton.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: auto;
+  min-height: 50px;
 
   margin-top: 5px;
   padding-left: 5px;
