--- a/client/src/styles/statButton.css
+++ b/client/src/styles/statButton.css
@@ -6,7 +6,7 @@
   border: 1px solid #cccccc;
   border-radius: 5px;
   padding: 10px;
-  width: 50%;
+  width: auto;
   max-width: 270px;
   margin: 10px 5px;
 }
