--- a/client/src/styles/studentStatsPage.css
+++ b/client/src/styles/studentStatsPage.css
@@ -2,12 +2,9 @@
   flex: 1;
   flex-direction: column;
   height: 85%;
-  position: relative;
 
-  padding-left: 5%;
-  padding-right: 5%;
-
-  overflow-y: auto;
+  padding: 20px 15%;
+  overflow: auto;
 }
 
 .student-stats-button-container {
@@ -17,4 +14,11 @@
   flex-wrap: wrap;
   margin: 20px;
   padding: 0 10px;
+}
+
+.student-stats-back-button-container {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding: 10px 0px;
 }
