--- a/client/src/styles/QuestionType1.css
+++ b/client/src/styles/QuestionType1.css
@@ -10,14 +10,21 @@
   flex: 1;
   border-right: 1px solid black;
   width: 50%;
+  min-width: 170px;
 }
 
 .question-type-1-question-answers-container {
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 10px;
+  padding: 10px 10px 0px 10px;
   width: 50%;
+
+  min-width: 300px;
+}
+
+.question-type-1-question-answers-container h2 {
+  margin-bottom: 10px;
 }
 
 .question-type-1-answers-container {
