--- a/client/src/styles/QuestionType3.css
+++ b/client/src/styles/QuestionType3.css
@@ -10,6 +10,7 @@
   flex: 1;
   width: 50%;
   border-right: 1px solid black;
+  min-width: 170px;
 }
 
 .question-type-3-question-answers-container {
