--- a/client/src/styles/QuestionType1.css
+++ b/client/src/styles/QuestionType1.css
@@ -17,14 +17,14 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 10px 10px 0px 10px;
   width: 50%;
 
   min-width: 300px;
 }
 
 .question-type-1-question-answers-container h2 {
-  margin-bottom: 10px;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
 }
 
 .question-type-1-answers-container {
