--- a/client/src/styles/QuestionType2.css
+++ b/client/src/styles/QuestionType2.css
@@ -49,13 +49,13 @@
   flex: 1;
   flex-direction: column;
   width: 50%;
-  padding: 10px 10px 0px 10px;
 
   min-width: 300px;
 }
 
 .question-type-2-question-answers-container h2 {
-  margin-bottom: 10px;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
 }
 
 .question-type-2-answers-container {
