--- a/client/src/styles/levelIndicator.css
+++ b/client/src/styles/levelIndicator.css
@@ -37,3 +37,27 @@
   max-width: 500px;
   margin: 10px;
 }
+
+.progress-container {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  height: 20px;
+}
+
+.progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: width 0.5s ease-in-out;
+}
+
+.overlay {
+  z-index: 1;
+  width: 100%;
+}
+
+.base {
+  z-index: 2;
+  width: 100%;
+}
