--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -65,3 +65,22 @@ input[type="text"]:focus {
   border-color: #57c79e;
   color: #fff;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
