--- a/client/src/styles/quizButtonReview.css
+++ b/client/src/styles/quizButtonReview.css
@@ -3,13 +3,19 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: auto;
+  min-height: 50px;
 
   margin-top: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 0 5px;
 
   overflow: hidden;
+}
+
+.quiz-button-review__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .quiz-button-review-name {
@@ -46,8 +52,10 @@
 }
 
 .quiz-button-review__content-class {
-  height: 100%;
-  width: auto;
+  height: 35px;
+  width: 35px;
+
+  min-width: 35px;
 }
 
 .quiz-button-review__content-student {
