--- a/client/src/styles/classPage.css
+++ b/client/src/styles/classPage.css
@@ -8,6 +8,13 @@
   overflow: auto;
 }
 
+.class-page-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
 .class-page-button-container {
   display: flex;
   justify-content: center;
@@ -33,4 +40,17 @@
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.class-page-modalside-new-student {
+  margin: 10px 0;
+}
+
+.class-page-modalside-button-container {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: end;
+
+  padding: 20px 0;
 }
