--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -5,14 +5,6 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.main {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
 button {
   cursor: pointer;
 }
@@ -83,4 +75,27 @@ input:focus {
   height: 50px;
   animation: spin 2s linear infinite;
   margin: 0 auto;
+}
+
+@media (orientation: landscape) {
+  .main {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+}
+
+@media only screen and (orientation: portrait) and (max-device-width: 768px) {
+  .main {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
 }
