--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -77,25 +77,34 @@ input:focus {
   margin: 0 auto;
 }
 
-@media (orientation: landscape) {
-  .main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-  }
+main {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
-@media only screen and (orientation: portrait) and (max-device-width: 768px) {
-  .main {
+@media (any-pointer: coarse) and (orientation: portrait) {
+  main {
     transform: rotate(-90deg);
     transform-origin: left top;
     width: 100vh;
     height: 100vw;
-    overflow: hidden;
     position: absolute;
     top: 100%;
     left: 0;
+  }
+}
+
+@media (any-pointer: coarse) and (orientation: landscape) {
+  main {
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+@media (any-pointer: fine) {
+  main {
+    width: 100vw;
+    height: 100vh;
   }
 }
