Ajustado texto pregunta

--- a/client/src/styles/QuestionType1.css
+++ b/client/src/styles/QuestionType1.css
@@ -29,5 +29,21 @@
 
 .question-type-1-answers-container {
   flex: 1;
-  overflow: auto;
+}
+
+@media (any-pointer: coarse) {
+  .question-type-1-question-answers-container {
+    overflow: auto;
+  }
+}
+
+@media (any-pointer: fine) {
+  .question-type-1-answers-container {
+    overflow: auto;
+  }
+
+  .question-text {
+    max-height: 300px;
+    overflow: auto;
+  }
 }
