--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 60px;
 
-  padding: 5px;
+  padding: 5px 10px;
 
   overflow: hidden;
 
@@ -52,6 +52,7 @@
 
 .header-avatar {
   height: 100%;
+  max-height: 50px;
   width: auto;
   scale: 1/1;
   margin-left: 10px;
