--- a/client/src/styles/classButton.css
+++ b/client/src/styles/classButton.css
@@ -43,11 +43,6 @@
 }
 
 .class-button__content-class {
-  height: 100%;
-  width: auto;
-}
-
-.class-button__content-student {
-  height: 70%;
-  width: auto;
+  width: 50px;
+  min-width: 50px;
 }
