--- a/client/src/styles/statButton.css
+++ b/client/src/styles/statButton.css
@@ -6,14 +6,16 @@
   border: 1px solid #cccccc;
   border-radius: 5px;
   padding: 10px;
-  width: auto;
-  max-width: 270px;
+  min-width: 280px;
   margin: 10px 5px;
 }
 
 .stat-button-avatar-container {
   flex: 0 0 50%;
   margin-right: 10px;
+  aspect-ratio: 1/1;
+  width: auto;
+  min-width: 100px;
 }
 
 .stat-button-avatar {
