--- a/client/src/styles/quizButtonReview.css
+++ b/client/src/styles/quizButtonReview.css
@@ -44,6 +44,7 @@
 .quiz-button-review > div > h2 {
   display: flex;
   align-items: center;
+  text-align: left;
 }
 
 .quiz-button-review > div > img {
