--- a/client/src/styles/questionType1.css
+++ b/client/src/styles/questionType1.css
@@ -22,9 +22,20 @@
   min-width: 300px;
 }
 
-.question-type-1-question-answers-container h2 {
+.question-type-question-flag {
+  display: flex;
   padding: 10px;
   border-bottom: 1px solid #ccc;
+}
+
+.flag-button {
+  margin-left: 5px;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border: 3px solid #fc8532;
 }
 
 .question-type-1-answers-container {
