Ajustado cursos en tarjetas de estadísticas

--- a/client/src/styles/statButton.css
+++ b/client/src/styles/statButton.css
@@ -38,3 +38,11 @@
 .stat-button-text p {
   margin: 5px 0;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-default {
+  cursor: default;
+}
