Ajustado problema scroll

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -5,6 +5,14 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 button {
   cursor: pointer;
 }
